2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-play-startup-jingle): Removed.
	(gnus-splash): Don't play jingle.
	(gnus): Silence gnus-load message.

	* gnus-art.el (gnus-treat-play-sounds): Removed.

	* gnus.el (gnus-play-jingle): Remove audio support.

	* gnus-cus.el (gnus-score-customize): Remove audio reference.

	* earcon.el: Removed -- no users.

	* gnus-audio.el: Removed -- no users of this package.

	* gnus-sum.el (gnus-summary-limit-children): Remove nocem support.

	* gnus-start.el (gnus-setup-news): Remove nocem support.

	* gnus-group.el (gnus-group-get-new-news): Removed nocem call.

	* gnus.el (gnus-use-nocem): Removed.

	* gnus-demon.el (gnus-demon-add-nocem, gnus-demon-scan-nocem):
	Removed.

	* gnus-nocem.el (gnus-nocem-issuers): Removed file.  Apparently nobody
	uses NoCeM any more.

	* gnus-art.el (gnus-ctan-url): Seems not very useful -- removed.
	(gnus-button-ctan-handler): Ditto.
	(gnus-button-handle-ctan-bogus-regexp): Ditto.
	(gnus-button-ctan-directory-regexp): Ditto.
	(gnus-button-handle-ctan): Ditto.
	(gnus-button-tex-level): Ditto.
	(gnus-button-alist): Removed CTAN stuff.

2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-response): Reversed logic in the
	nnimap-streaming test.

	* gnus-start.el (gnus-get-unread-articles): Don't try to open failed
	servers twice.

	* nnimap.el (nnimap-open-connection): Add more error reporting when
	nnimap fails early.

	* nnheader.el (nnheader-get-report-string): New function.
	(nnheader-get-report): Use it.

	* gnus-int.el (gnus-check-server): Say what the error was when opening
	failed.

	* nnimap.el (nnimap-wait-for-response): Search further when we're not
	using streaming.

2010-09-25  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-rescale-image): Use our defalias
	gnus-window-inside-pixel-edges.

2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-copy-server): Add documentation.
